--- a/Exercise2/Exercise2.csproj
+++ b/Exercise2/Exercise2.csproj
@@ -46,6 +46,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="GlobalVar.cs" />
         <Compile Include="MainWindow.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -54,7 +55,6 @@
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="VigenereCypher.cs" />
         <EmbeddedResource Include="MainWindow.resx">
           <DependentUpon>MainWindow.cs</DependentUpon>
         </EmbeddedResource>
